﻿SoundHelix
----------

Author: Thomas Schürger (thomas@schuerger.com)


Change log
----------


0.6u:

    - Refactored and cleaned up lots of SoundHelix' internals. This also affects the API of several externally-exposed interfaces.

    - The MidiPlayer now supports setting arbitrary MIDI controller values at the beginning of the song, using the "controllerValue"
      tag. This allows, for example, to set relative MIDI volumes, panning, etc., per MIDI channel.

    - The track configuration in the SimpleArrangementEngine now supports more than one "sequenceEngine" tag. One of the provided
      SequenceEngines will be taken at random for the track.

    - Fixed applet to include the SoundHelix XML file URL in Facebook and Twitter URLs.

    - Added new example SoundHelix-Percussion.xml.


0.5: 2012-10-07

    - Added first version of the MIDI file export to the MidiPlayer. Use the tag "midiFilename" to define the MIDI filename template
      for writing MIDI files (one for each MIDI device) between generating and playing a song.

    - Added arbitrary skipping support to the MidiPlayer, including backward skipping. Skipping is now done instantaneously, muting
      the MIDI channels first. Use "skip 0" to replay the current song from the beginning.

    - For the PatternHarmonyEngine the chord crossover pitch can now be defined using the "crossoverPitch" tag. Any chord with
      a root pitch higher than or equal to this pitch will be transposed one octave down, otherwise the root node is taken as-is.
      This is only done if the chord is specified by its name (e.g. "Am6") rather than by providing the pitches in
      "pitch1:pitch2:pitch3" syntax. Previously, the crossover pitch always was between "D" and "D#" (i.e., starting with D#, the
      chords were transposed one octave down, C, C# and D were not transposed). The crossover pitch defaults to this value (3 for
      "D#") for backwards compatibility.
