@@ -1,8 +1,14 @@
 package com.soundhelix.misc;
 
+import com.soundhelix.component.harmonyengine.HarmonyEngine;
+
 /**
  * Represents a harmony. A harmony defines the chord sections and the chords to use for every tick. Instances of this class must consistently return
  * their results.
+ * 
+ * Harmonies are usually generated by HarmonyEngines.
+ * 
+ * @see HarmonyEngine
  * 
  * @author Thomas Schuerger (thomas@schuerger.com)
  */
